fix: avoid layout shifts for navbar logo
To avoid reflowing of the navbar elements, set a fixed width for the
navbar logo as a HTML style attribute, to reserve the space as early as
possible.

See https://web.dev/optimize-cls/#images-without-dimensions

--- a/src/_includes/components/header.css
+++ b/src/_includes/components/header.css
@@ -49,12 +49,6 @@ nav {
   align-items: center;
 }
 
-.home img {
-  height: 4em;
-  width: auto;
-}
-
-
 .nav-item {
   display: inline-block;
   font-size: 1.2em;
